--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,8 +28,6 @@
 						class="form-control"
 						placeholder="Username"
 					/>
-					<div class="valid-feedback">valid</div>
-					<div class="invalid-feedback">invalid</div>
 				</div>
 				<div class="form-group mb-2">
 					<input
@@ -39,12 +37,10 @@
 						class="form-control"
 						placeholder="Password"
 					/>
-					<div class="invalid-feedback">test</div>
 				</div>
 				<button type="submit" class="btn btn-primary">Login</button>
+				<a href="/register" class="btn btn-secondary">Register</a>
 			</form>
 		</main>
-
-		<%- include('partials/footer'); %>
 	</body>
 </html>
