--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,13 +7,7 @@
 		<main class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Hi there!</h1>
-					<hr />
-					<p>
-						This app is used to track your own good and bad
-						experiences per day.
-					</p>
-					<p>To use this app, please login or create an account.</p>
+					<h1>Hello <%= user.username %></h1>
 				</div>
 			</div>
 		</main>
