--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,23 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/">Template</a>
+		<a class="navbar-brand" href="/">+ -</a>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="/"
-						>Home</a
-					>
+					<a class="
+							nav-link
+							<%=
+							(typeof menu !== "undefined" &&menu==='dashboard' ? 'active' : '' ) %>
+						"
+						href="/"
+						>Dashboard</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="
+							nav-link
+							<%=
+							(typeof menu !== "undefined" && menu==='entries' ? 'active' : '' ) %>
+						"
+						href="/entries"
+						>Entries</a>
 				</li>
 			</ul>
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-					<a class="nav-link" aria-current="page" href="/login"
-						>Login</a
-					>
-				</li>
+			<ul class="navbar-nav mb-2 mb-lg-0">
+				<% if(typeof user !=="undefined" ) { %>
+					<li class="nav-item">
+						<a class="nav-link <%=
+							(typeof menu !== "undefined" && menu==='account' ? 'active' : '' ) %>" href="/account">Account</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/logout">Logout</a>
+					</li>
+					<% } else { %>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="/login">Login</a>
+						</li>
+					<% } %>
 			</ul>
 		</div>
 	</div>
