--- a/views/entry-create.ejs
+++ b/views/entry-create.ejs
@@ -27,6 +27,36 @@
 								name="comment"
 							/>
 						</div>
+						<div class="form-group">
+							<label for="plusTags">Plus tags</label>
+							<select
+								name="plusTags"
+								id="plusTags"
+								multiple
+								class="form-control"
+							>
+								<% tags.forEach((tag) => { %>
+								<option value="<%= tag.id %>">
+									<%= tag.name %>
+								</option>
+								<% }); %>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="minusTags">Minus tags</label>
+							<select
+								name="minusTags"
+								id="minusTags"
+								multiple
+								class="form-control"
+							>
+								<% tags.forEach((tag) => { %>
+								<option value="<%= tag.id %>">
+									<%= tag.name %>
+								</option>
+								<% }); %>
+							</select>
+						</div>
 						<div class="form-group mt-2">
 							<button type="submit" class="btn btn-primary">
 								Create
