--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -30,6 +30,36 @@
 								value="<%- entry.comment %>"
 							/>
 						</div>
+						<div class="form-group">
+							<label for="plusTags">Plus tags</label>
+							<select
+								name="plusTags"
+								id="plusTags"
+								multiple
+								class="form-control"
+							>
+								<% tags.forEach((tag) => { %>
+								<option value="<%= tag.id %>" <%= entry.plusTags.some(plusTag => plusTag.id === tag.id) ? "selected" : "" %>>
+									<%= tag.name %>
+								</option>
+								<% }); %>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="minusTags">Minus tags</label>
+							<select
+								name="minusTags"
+								id="minusTags"
+								multiple
+								class="form-control"
+							>
+								<% tags.forEach((tag) => { %>
+								<option value="<%= tag.id %>" <%= entry.minusTags.some(minusTag => minusTag.id === tag.id) ? "selected" : "" %>>
+									<%= tag.name %>
+								</option>
+								<% }); %>
+							</select>
+						</div>
 						<div class="form-group mt-2">
 							<button type="submit" class="btn btn-primary">
 								Update
