--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,7 @@
 <html lang="en">
 	<head>
 		<%- include('partials/head') %>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
 	</head>
 	<body>
 		<header><%- include('partials/header'); %></header>
@@ -8,6 +9,13 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1>Hello <%= user.username %></h1>
+					<canvas id="myChart" height="120"></canvas>
+					<script type="text/javascript">
+						const ctx = document
+							.getElementById("myChart")
+							.getContext("2d");
+						const myChart = new Chart(ctx, <%- JSON.stringify(dashboardData) %>);
+					</script>
 				</div>
 			</div>
 		</main>
