--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,15 @@
 						href="/entries"
 						>Entries</a>
 				</li>
+				<li class="nav-item">
+					<a class="
+							nav-link
+							<%=
+							(typeof menu !== "undefined" && menu==='tags' ? 'active' : '' ) %>
+						"
+						href="/tags"
+						>Tags</a>
+				</li>
 			</ul>
 			<ul class="navbar-nav mb-2 mb-lg-0">
 				<% if(typeof user !=="undefined" ) { %>
