--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -29,8 +29,7 @@
 							<tr>
 								<td>
 									<%= new
-									Date(entry.createdAt).toLocaleDateString()
-									%>
+									Date(entry.date).toLocaleDateString() %>
 								</td>
 								<td><%= entry.comment %></td>
 								<td>
