--- a/views/entry-create.ejs
+++ b/views/entry-create.ejs
@@ -19,6 +19,17 @@
 					<% } %>
 					<form action="/entries/create" method="post">
 						<div class="form-group">
+							<label for="date">Date</label>
+							<input
+								type="date"
+								class="form-control"
+								id="date"
+								name="date"
+								value="<%= today %>"
+								max="<%= today %>"
+							/>
+						</div>
+						<div class="form-group">
 							<label for="comment">Comment</label>
 							<input
 								type="text"
