--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -8,7 +8,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1>
-						<%- new Date(entry.createdAt).toLocaleDateString() %>
+						<%- new Date(entry.date).toLocaleDateString() %>
 					</h1>
 					<% if(validationErrors.length > 0) { %>
 					<div class="alert alert-danger">
@@ -20,6 +20,17 @@
 					</div>
 					<% } %>
 					<form action="/entries/<%- entry.id %>" method="post">
+						<div class="form-group">
+							<label for="date">Date</label>
+							<input
+								type="date"
+								class="form-control"
+								id="date"
+								name="date"
+								value="<%= dateVal %>"
+								max="<%= today %>"
+							/>
+						</div>
 						<div class="form-group">
 							<label for="comment">Comment</label>
 							<input
