--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,12 +9,18 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1>Hello <%= user.username %></h1>
-					<canvas id="myChart" height="120"></canvas>
+					<hr />
+					<canvas id="perWeekday" height="120" class="mb-5"></canvas>
+					<canvas id="perTag" height="120" class="mb-5"></canvas>
 					<script type="text/javascript">
-						const ctx = document
-							.getElementById("myChart")
+						const weekdayCtx = document
+							.getElementById("perWeekday")
 							.getContext("2d");
-						const myChart = new Chart(ctx, <%- JSON.stringify(dashboardData) %>);
+						const perWeekdayChart = new Chart(weekdayCtx, <%- JSON.stringify(dashboardDataWeekdays) %>);
+						const tagCtx = document
+							.getElementById("perTag")
+							.getContext("2d");
+						const perTagChart = new Chart(tagCtx, <%- JSON.stringify(dashboardDataTags) %>);
 					</script>
 				</div>
 			</div>
