--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,6 +12,10 @@
 					<hr />
 					<canvas id="perWeekday" height="120" class="mb-5"></canvas>
 					<canvas id="perTag" height="120" class="mb-5"></canvas>
+					<h1>line graph with increasing dates and + - counts</h1>
+					<h1>
+						Graph showing which + - are more common on certain days
+					</h1>
 					<script type="text/javascript">
 						const weekdayCtx = document
 							.getElementById("perWeekday")
