--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,6 +16,7 @@
 					<h1>
 						Graph showing which + - are more common on certain days
 					</h1>
+					<h1>Graph showing the ratio between + -</h1>
 					<script type="text/javascript">
 						const weekdayCtx = document
 							.getElementById("perWeekday")
