able to remove tags

--- a/views/entry-create.ejs
+++ b/views/entry-create.ejs
@@ -46,6 +46,7 @@
 								multiple
 								class="form-control"
 							>
+								<option value="">None...</option>
 								<% tags.forEach((tag) => { %>
 								<option value="<%= tag.id %>">
 									<%= tag.name %>
@@ -61,6 +62,7 @@
 								multiple
 								class="form-control"
 							>
+								<option value="">None...</option>
 								<% tags.forEach((tag) => { %>
 								<option value="<%= tag.id %>">
 									<%= tag.name %>
